2015-08-22 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/stm8/peep.c:
	  Fix a bug in peephole rule condition notUsed().

2015-08-22 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-2188.c:
	* src/SDCCast.c:
	  Apply patch #248 by Pavel Pisa <pisa@cmp.felk.cvut.cz>.

2015-08-19 Ben Shi <powerstudio1st AT 163 DOT com>
	* configure.ac:
	* configure:
	  Correct build failure on sparc64-netbsd.

2015-08-19 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/condopptr.c:
	  Add more test.
	* src/SDCC.y:
	  Improve conditional expression.
	* configure.ac:
	* configure:
	  Correct spots in previous commit.

2015-08-17 Ben Shi <powerstudio1st AT 163 DOT com>
	* configure.ac:
	* configure:
	  Extend stack size on cygwin64.

2015-08-15 Ben Shi <powerstudio1st AT 163 DOT com>
        * src/SDCCast.c:
          Fix a bug in storage class check.
        * support/regression/tests/gcc-torture-execute-20020402-3.c:
          Enable test case.

2015-08-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/array.c:
	  Implement RFE #454 for index[array] access.
	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Emit warning for non-standard label without statement.
	* support/regression/tests/generic.c:
	  Disable test for host, since older host compilers are still in use.

2015-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/generic.c,
	  doc/sdccman.lyx:
	  Implement C11 generic selections.

2015-08-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/gcc-torture-execute-920721-3.c,
	  support/regression/tests/gcc-torture-execute-pr34176.c,
	  support/regression/tests/implicit_int.c:
	  Diagnostic for implicit int.

2015-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix bug #2408.